--- a/src/app/login/containers/login/login.component.html
+++ b/src/app/login/containers/login/login.component.html
@@ -1,3 +1,33 @@
-<p>
-  login works!
-</p>
+<div class="container">
+
+  <div class="row align-items-center justify-content-center">
+
+    <!-- ABOUT THE APP -->
+    <div class="col-md-5 col-sm-6 box d-flex align-items-center px-4 py-4">
+      <div class="feature-bg text-white text-center">
+        <h3>Track and Save your Speech</h3><br/>
+        <p>Create and Draft your speech efficiently with Update, Delete and Share feature so you could get the most out of your leisure time.</p>
+      </div>
+    </div>
+
+    <!-- FORM -->
+    <div class="col-md-5 col-sm-6 bg-white box px-5 py-5">
+
+      <!-- LOGO -->
+      <div class="text-center d-flex justify-content-center pt-3 pb-5"
+           id="logo">
+        <fa name="edit"
+            size="2x"></fa>
+
+        <h4>
+          <strong>Speech Draft</strong>
+        </h4>
+      </div><!-- END .logo -->
+
+      <!-- FORM -->
+      <app-login-form></app-login-form>
+
+    </div>
+  </div>
+
+</div>
