--- a/src/assets/styles/base/_custom.scss
+++ b/src/assets/styles/base/_custom.scss
@@ -2,7 +2,20 @@
 @import 'typography.scss';
 
 
-body {
-  background-color: theme-color('primary');
-  font-family: $Montserrat;
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
+
+body {
+  background-color: theme-color('gray');
+  font-family: $Montserrat;
+  height: 100vh;
+}
+
+ul, li { list-style-type: none; }
+
+
+/* Cursor  */
+.cursor-pointer { cursor: pointer; }
