--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -5,5 +5,6 @@
 @import 'components/box';
 @import 'components/button';
 @import 'components/input';
+@import 'components/tabs';
 
 @import 'utils/mixins';
