--- a/src/assets/styles/components/_box.scss
+++ b/src/assets/styles/components/_box.scss
@@ -1,4 +1,5 @@
 .box {
+  border-radius: 10px;
   -webkit-box-shadow: -5px 3px 90px -24px rgba(0,0,0,0.54);
   -moz-box-shadow: -5px 3px 90px -24px rgba(0,0,0,0.54);
   box-shadow: -5px 3px 90px -24px rgba(0,0,0,0.54);
