--- a/src/app/login/containers/login/login.component.html
+++ b/src/app/login/containers/login/login.component.html
@@ -7,8 +7,8 @@
       <div class="feature-bg text-white text-center">
         <h3>Track and Save your Speech</h3><br/>
         <p>Create and Draft your speech efficiently with Update, Delete and Share feature so you could get the most out of your leisure time.</p>
-      </div>
-    </div>
+      </div><!-- END .feature-bg -->
+    </div><!-- END .box -->
 
     <!-- FORM -->
     <div class="col-md-5 col-sm-6 bg-white box px-5 py-5">
@@ -27,7 +27,7 @@
       <!-- FORM -->
       <app-login-form></app-login-form>
 
-    </div>
-  </div>
+    </div><!-- END .box -->
+  </div><!-- END .row -->
 
-</div>
+</div><!-- END .container -->
