--- a/src/assets/styles/base/_custom.scss
+++ b/src/assets/styles/base/_custom.scss
@@ -19,3 +19,7 @@ ul, li { list-style-type: none; }
 
 /* Cursor  */
 .cursor-pointer { cursor: pointer; }
+
+
+/* Dimensions */
+.height-vh-100 { height: 100vh; }
