--- a/src/app/speech/components/speech-form/speech-form.component.html
+++ b/src/app/speech/components/speech-form/speech-form.component.html
@@ -1,3 +1,53 @@
-<p>
-  speech-form works!
-</p>
+<div class="container-fluid">
+  <form novalidate>
+
+    <div class="row">
+      <div class="col-md-12 mb-3">
+        <textarea class="form-control"
+                  cols="30"
+                  rows="10"></textarea>
+      </div><!-- END .col-md-12 -->
+
+      <div class="col-md-4">
+        <input type="text"
+               class="form-control mb-2"
+                placeholder="Author">
+      </div><!-- END .col-md-4 -->
+
+      <div class="col-md-4">
+        <input type="text"
+               class="form-control mb-2"
+               placeholder="Keywords">
+      </div><!-- END .col-md-4 -->
+
+      <div class="col-md-4">
+        <input type="text"
+               class="form-control mb-2"
+               placeholder="Date"
+               bsDatepicker
+               [bsConfig]="datepickerConfig"
+               placement="top">
+      </div><!-- END .col-md-4 -->
+
+      <!-- BUTTONS -->
+      <div class="col-md-12 text-right mt-5 buttons">
+        <button class="btn mr-2">
+          <span>Delete</span>
+          <fa name="trash"></fa>
+        </button>
+
+        <button class="btn btn-primary mr-2">
+          <span>Save</span>
+          <fa name="save"></fa>
+        </button>
+
+        <button class="btn btn-primary">
+          <span>Share</span>
+          <fa name="share"></fa>
+        </button>
+      </div><!-- END .buttons -->
+
+    </div><!-- END .row -->
+
+  </form>
+</div><!-- END .container -->
