--- a/src/assets/styles/components/_input.scss
+++ b/src/assets/styles/components/_input.scss
@@ -1,3 +1,8 @@
-input.form-control {
+input.form-control, textarea.form-control, select.form-control {
+  font-size: 13px !important;
   border-radius: 20px;
+}
+
+.form-control:focus {
+  box-shadow: 0 0 0 0.1rem rgba(249, 71, 84, 0.25);
 }
