--- a/src/app/speech/containers/speech/speech.component.html
+++ b/src/app/speech/containers/speech/speech.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid px-0">
   <div class="red-bg-border">
-    <div class="row d-flex align-items-center height-vh-100">
+    <div class="row d-flex align-items-center w-100 height-vh-100 ml-0">
 
       <div class="col-md-10 offset-md-1 box bg-white">
 
