#4 Add Speech Draft Logo on Speech Page and Fix its responsiveness

--- a/src/app/speech/containers/speech/speech.component.html
+++ b/src/app/speech/containers/speech/speech.component.html
@@ -1,5 +1,17 @@
 <div class="container-fluid px-0">
   <div class="red-bg-border">
+
+    <!-- LOGO -->
+    <div class="logo text-white d-flex position-absolute">
+      <fa name="edit"
+          class="position-relative mr-2"
+          size="2x"></fa>
+
+      <h6 class="position-relative">
+        <strong>Speech Draft</strong>
+      </h6>
+    </div>
+
     <div class="row d-flex align-items-center w-100 height-vh-100 ml-0">
 
       <div class="col-md-10 offset-md-1 box bg-white">
