--- a/src/app/speech/containers/speech/speech.component.html
+++ b/src/app/speech/containers/speech/speech.component.html
@@ -10,7 +10,7 @@
       <h6 class="position-relative">
         <strong>Speech Draft</strong>
       </h6>
-    </div>
+    </div><!-- END .logo -->
 
     <div class="row d-flex align-items-center w-100 height-vh-100 ml-0">
 
