--- a/src/app/speech/containers/speech/speech.component.scss
+++ b/src/app/speech/containers/speech/speech.component.scss
@@ -26,6 +26,29 @@
   h6 { top: 1px; }
 }
 
+/* TABS */
+::ng-deep .nav-tabs {
+  .nav-link {
+    @include max-media(853px) {
+      fa {
+        font-size: 1.2rem;
+        padding-right: 0 !important;
+
+        & + span { display: none; }
+      }
+    }
+
+    color: #808080cf;
+    border: none;
+    font-size: 0.9rem;
+
+    &.active {
+      font-weight: bold;
+      border-bottom: 2px solid $primary;
+    }
+  }
+}
+
 $breakpoint-991: 991px;
 
 /* BORDER */
@@ -50,3 +73,4 @@ $breakpoint-991: 991px;
   height: 600px;
   padding: 30px;
 }
+
