#6 Setup Search All Speech UI and its Responsiveness. Remove SpeechTableListCompoenent avoid over-componentize the application

--- a/src/app/speech/components/speech-form/speech-form.component.html
+++ b/src/app/speech/components/speech-form/speech-form.component.html
@@ -8,26 +8,7 @@
                   rows="10"></textarea>
       </div><!-- END .col-md-12 -->
 
-      <div class="col-md-4">
-        <input type="text"
-               class="form-control mb-2"
-                placeholder="Author">
-      </div><!-- END .col-md-4 -->
-
-      <div class="col-md-4">
-        <input type="text"
-               class="form-control mb-2"
-               placeholder="Keywords">
-      </div><!-- END .col-md-4 -->
-
-      <div class="col-md-4">
-        <input type="text"
-               class="form-control mb-2"
-               placeholder="Date"
-               bsDatepicker
-               [bsConfig]="datepickerConfig"
-               placement="top">
-      </div><!-- END .col-md-4 -->
+      <app-speech-sub-fields></app-speech-sub-fields>
 
       <!-- BUTTONS -->
       <div class="col-md-12 text-right mt-5 buttons">
