--- a/src/app/speech/components/speech-sub-fields/speech-sub-fields.component.html
+++ b/src/app/speech/components/speech-sub-fields/speech-sub-fields.component.html
@@ -1,3 +1,24 @@
-<p>
-  speech-sub-fields works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4">
+      <input type="text"
+             class="form-control mb-2"
+             placeholder="Author">
+    </div><!-- END .col-md-4 -->
+
+    <div class="col-md-4">
+      <input type="text"
+             class="form-control mb-2"
+             placeholder="Keywords">
+    </div><!-- END .col-md-4 -->
+
+    <div class="col-md-4">
+      <input type="text"
+             class="form-control mb-2"
+             placeholder="Date"
+             bsDatepicker
+             [bsConfig]="datepickerConfig"
+             placement="top">
+    </div><!-- END .col-md-4 -->
+  </div>
+</div>
