--- a/src/app/speech/containers/view-speech/view-speech.component.html
+++ b/src/app/speech/containers/view-speech/view-speech.component.html
@@ -19,7 +19,7 @@
 
     <!-- SPEECH FORM -->
     <div class="col-lg-8 col-md-12">
-      <app-speech-form [speech]="selectedSpeech"></app-speech-form>
+      <app-speech-form [data]="selectedSpeech"></app-speech-form>
     </div><!-- END .col-lg-8 col-md-12 -->
 
   </div><!-- END .row -->
