--- a/src/app/speech/components/speech-sub-fields/speech-sub-fields.component.html
+++ b/src/app/speech/components/speech-sub-fields/speech-sub-fields.component.html
@@ -1,15 +1,20 @@
+<form novalidate
+      [formGroup]="form">
 <div class="container-fluid">
   <div class="row">
+
     <div class="col-md-4">
       <input type="text"
              class="form-control mb-2"
-             placeholder="Author">
+             placeholder="Author"
+             formControlName="author">
     </div><!-- END .col-md-4 -->
 
     <div class="col-md-4">
       <input type="text"
              class="form-control mb-2"
-             placeholder="Keywords">
+             placeholder="Keywords"
+             formControlName="keywords">
     </div><!-- END .col-md-4 -->
 
     <div class="col-md-4">
@@ -18,7 +23,9 @@
              placeholder="Date"
              bsDatepicker
              [bsConfig]="datepickerConfig"
-             placement="top">
+             placement="top"
+             formControlName="date">
     </div><!-- END .col-md-4 -->
   </div>
 </div>
+</form>
