--- a/src/app/speech/containers/search-speech/search-speech.component.html
+++ b/src/app/speech/containers/search-speech/search-speech.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid px-0">
 
-  <app-speech-sub-fields></app-speech-sub-fields>
+  <app-speech-sub-fields [form]="form"></app-speech-sub-fields>
 
   <div *ngIf="speeches"
        class="table-responsive-sm mt-5 px-3">
