#9 Fix SearchSpeech Keys Functionality

--- a/src/app/speech/containers/search-speech/search-speech.component.html
+++ b/src/app/speech/containers/search-speech/search-speech.component.html
@@ -7,7 +7,7 @@
     <table class="table table-hover">
       <thead>
         <tr>
-          <th *ngFor="let key of keys(speeches[0])"
+          <th *ngFor="let key of speechKeys"
               scope="col">{{ key }}</th>
         </tr>
       </thead>
