#7 Setup View, Update and Delete Functionality on ViewSpeeches and Create Functionality #8 SubmitSpeech

--- a/src/app/speech/components/speech-form/speech-form.component.html
+++ b/src/app/speech/components/speech-form/speech-form.component.html
@@ -3,6 +3,7 @@
         [formGroup]="form">
 
     <div class="row">
+
       <div class="col-md-12 mb-3">
         <textarea class="form-control"
                   cols="30"
@@ -18,20 +19,22 @@
         <!-- DELETE -->
         <button *ngIf="speeches?.length"
                 class="btn btn-delete mr-2"
-                (click)="openModal(delete)">
+                (click)="openModal('delete')">
           <span>Delete</span>
           <fa name="trash"></fa>
         </button>
 
         <!-- SAVE -->
-        <button class="btn btn-primary mr-2">
+        <button class="btn btn-primary mr-2"
+                (click)="onSaveSpeech(form.value)">
           <span>Save</span>
           <fa name="save"></fa>
         </button>
 
         <!-- SHARE -->
         <button *ngIf="speeches?.length"
-                class="btn btn-primary">
+                class="btn btn-primary"
+                (click)="openModal('share')">
           <span>Share</span>
           <fa name="share"></fa>
         </button>
@@ -42,17 +45,7 @@
   </form>
 </div><!-- END .container -->
 
-<!-- DELETE MODAL -->
-<ng-template #delete>
-  <div class="modal-body text-center">
-    <p>Do you want to delete <strong>{{speech?.title}}</strong> ?</p>
-
-    <button type="button"
-            class="btn btn-default mr-3"
-            (click)="modalRef.hide()">No</button>
-
-    <button type="button"
-            class="btn btn-primary"
-            (click)="onDeleteSpeech(speech.id)">Yes</button>
-  </div>
-</ng-template>
+<!-- MODAL TEMPLATE -->
+<app-modal-template [speech]="speech"
+                    [modalRef]="modalRef"
+                    (deleteSpeech)="onDeleteSpeech($event)"></app-modal-template>
