--- a/src/assets/styles/base/_colors.scss
+++ b/src/assets/styles/base/_colors.scss
@@ -1,4 +1,4 @@
 $primary: #F94754;
 $gray: #F2F1F1;
 $light-primary: lighten($primary, 35%);
-$light-green: lighten(green, 12%);
+$light-green: #22cf3c;
