--- a/src/app/speech/components/speech-form/speech-form.component.html
+++ b/src/app/speech/components/speech-form/speech-form.component.html
@@ -17,9 +17,9 @@
       <!-- BUTTONS -->
       <div class="col-md-12 text-right mt-5 buttons">
         <!-- DELETE -->
-        <button *ngIf="speeches?.length"
+        <button *ngIf="speech"
                 class="btn btn-delete mr-2"
-                (click)="openModal('delete', 'md')">
+                (click)="openModal('delete')">
           <span>Delete</span>
           <fa name="trash"></fa>
         </button>
@@ -32,9 +32,9 @@
         </button>
 
         <!-- SHARE -->
-        <button *ngIf="speeches?.length"
+        <button *ngIf="speech"
                 class="btn btn-primary"
-                (click)="openModal('share', 'md')">
+                (click)="openModal('share')">
           <span>Share</span>
           <fa name="share"></fa>
         </button>
