#7 Remove tab active property on its data and interface

--- a/src/app/speech/containers/speech/speech.component.html
+++ b/src/app/speech/containers/speech/speech.component.html
@@ -19,7 +19,7 @@
         <!-- TABS -->
         <tabset [justified]="true">
           <tab *ngFor="let tab of speechTabs"
-               [active]="tab.active"
+               [active]="tabset"
                (select)="router.navigate(['speech', tab.url])">
             <ng-template tabHeading>
               <fa class="pr-2 cursor-pointer"
