--- a/src/app/speech/components/speech-form/speech-form.component.scss
+++ b/src/app/speech/components/speech-form/speech-form.component.scss
@@ -10,6 +10,8 @@ $breakpoint-991: 991px;
   }
 }
 
+/* FORM CONTROL*/
+.form-control.ng-touched.ng-invalid { border: 1px solid #f18797; }
 
 /* BUTTONS */
 .buttons {
