--- a/src/app/speech/components/speech-sub-fields/speech-sub-fields.component.html
+++ b/src/app/speech/components/speech-sub-fields/speech-sub-fields.component.html
@@ -1,31 +1,36 @@
 <form novalidate
       [formGroup]="form">
-<div class="container-fluid">
-  <div class="row">
+  <div class="container-fluid">
+    <div class="row">
 
-    <div class="col-md-4">
-      <input type="text"
-             class="form-control mb-2"
-             placeholder="Author"
-             formControlName="author">
-    </div><!-- END .col-md-4 -->
+      <div *ngFor="let field of fields"
+           class="col-md-4">
 
-    <div class="col-md-4">
-      <input type="text"
-             class="form-control mb-2"
-             placeholder="Keywords"
-             formControlName="keywords">
-    </div><!-- END .col-md-4 -->
+        <div class="form-group">
 
-    <div class="col-md-4">
-      <input type="text"
-             class="form-control mb-2"
-             placeholder="Date"
-             bsDatepicker
-             [bsConfig]="datepickerConfig"
-             placement="top"
-             formControlName="date">
-    </div><!-- END .col-md-4 -->
-  </div>
-</div>
+          <input *ngIf="field.control != 'date'"
+                 type="text"
+                 class="form-control"
+                 [placeholder]="field.placeholder"
+                 [formControlName]="field.control">
+
+
+          <input *ngIf="field.control === 'date'"
+                 type="text"
+                 class="form-control"
+                 placeholder="Date"
+                 bsDatepicker
+                 [bsConfig]="datepickerConfig"
+                 placement="top"
+                 formControlName="date">
+
+          <app-error-field-message [form]="form"
+                                   [name]="field.control"></app-error-field-message>
+
+
+        </div><!-- END .form-group -->
+      </div><!-- END .col-md-4 -->
+
+    </div><!-- END .row -->
+  </div><!-- END .container-fluid -->
 </form>
