#9 Setup SearchSpeech View Functionality

--- a/src/app/speech/components/speech-form/modal/modal-template.component.html
+++ b/src/app/speech/components/speech-form/modal/modal-template.component.html
@@ -60,3 +60,13 @@
 
   </div><!-- END .modal-body -->
 </ng-template>
+
+<!-- VIEW TEMPLATE -->
+<ng-template #view>
+  <div class="modal-body text-center">
+    <span class="close pull-right cursor-pointer"
+          (click)="closeModal()">&times;</span>
+
+    <pre class="text-left">{{ speech.content }}</pre>
+  </div><!-- END .modal-body -->
+</ng-template>
