#9 Move to speech parent component directory and Rename ModalTemplateComponent to ModalTemplatesComponent

--- a/src/app/speech/components/speech-form/speech-form.component.html
+++ b/src/app/speech/components/speech-form/speech-form.component.html
@@ -51,6 +51,6 @@
 
 
 <!-- MODAL TEMPLATE -->
-<app-modal-template [speech]="speech"
+<app-modal-templates [speech]="speech"
                     [modalRef]="modalRef"
-                    (deleteSpeech)="onDeleteSpeech($event)"></app-modal-template>
+                    (deleteSpeech)="onDeleteSpeech($event)"></app-modal-templates>
