--- a/src/app/speech/containers/search-speech/search-speech.component.html
+++ b/src/app/speech/containers/search-speech/search-speech.component.html
@@ -41,5 +41,5 @@
 </div><!-- END .container-fluid -->
 
 <!-- MODAL TEMPLATES -->
-<app-modal-template [speech]="selectedSpeech"
-                    (deleteSpeech)="onSpeechDelete($event)"></app-modal-template>
+<app-modal-templates [speech]="selectedSpeech"
+                    (deleteSpeech)="onSpeechDelete($event)"></app-modal-templates>
