#9 Update ErrorFieldMessageComponent to use style visibility hidden for the composed condition than *ngIf to avoid ui flickering

--- a/src/app/speech/components/error-field-message/error-field-message.component.html
+++ b/src/app/speech/components/error-field-message/error-field-message.component.html
@@ -1,4 +1,4 @@
-<small *ngIf="checkFieldRequiredError()"
+<small [style.visibility]="checkFieldRequiredError() ? 'visible': 'hidden'"
        class="text-danger capital-case">
   <i>{{ name }} is required</i>
 </small>
