--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,10 @@
-<p>
-  page-not-found works!
-</p>
+<div class="container-fluid">
+  <div class="row d-flex justify-content-center align-items-center">
+    <div class="col-md-8 text-center">
+
+      <h1>404</h1>
+      <p>The page you're looking is removed or doesn't exists</p>
+
+    </div><!-- END .col-md-8 -->
+  </div><!-- END .row -->
+</div><!-- END .container -->
