#7 Fix Form Responsiveness and Change global import 'main' scss to a specific import of utils/mixins and base/colors

--- a/src/app/speech/components/speech-sub-fields/speech-sub-fields.component.scss
+++ b/src/app/speech/components/speech-sub-fields/speech-sub-fields.component.scss
@@ -1,8 +1,15 @@
+@import 'utils/mixins';
 
 /* HOST */
 :host { width: 100%; }
 
 /* INPUT */
+.form-group {
+  @include max-media(767px) {
+    margin-bottom: 0;
+  }
+}
+
 input {
   font-size: 12px !important;
   color: black;
