--- a/src/app/speech/components/speech-form/speech-form.component.html
+++ b/src/app/speech/components/speech-form/speech-form.component.html
@@ -4,7 +4,7 @@
 
     <div class="row">
 
-      <div class="col-md-12 mb-3">
+      <div class="col-md-12">
         <textarea class="form-control"
                   cols="30"
                   rows="10"
