--- a/src/app/speech/containers/submit-speech/submit-speech.component.html
+++ b/src/app/speech/containers/submit-speech/submit-speech.component.html
@@ -1,4 +1,4 @@
 <div class="container">
   <app-speech-form [speeches]="speeches"
                    (saveSpeech)="onSaveSpeech($event)"></app-speech-form>
-</div>
+</div><!-- END .container -->
